[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-seispy"
version = "1.3.11"
description = "A Python package for seismic data processing"
readme = "README.md"
authors = [
    {name = "Mijian Xu", email = "gomijianxu@gmail.com"}
]
license = {text = "GPLv3"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "numpy>=1.19.0,<2.0",
    "scipy>=1.9.1",
    "matplotlib>=3.5.0",
    "pandas>=1.0.0",
    "obspy>=1.2.1",
    "pyside6>=6.2.0",
    "scikits-bootstrap>=1.0.0",
    "numba",
    "pyproj"
]

[project.urls]
homepage = "https://github.com/xumi1993/seispy"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["seispy", "seispy.*"]

[tool.setuptools.package-data]
"seispy" = ["data/*"]

[project.scripts]
gen_rayp_lib = "seispy.psrayp:gen_rayp_lib"
prf = "seispy.scripts:prf"
srf = "seispy.scripts:srf"
setpar = "seispy.rf:setpar"
rf2depth = "seispy.rf2depth_makedata:rf2depth"
plotrt = "seispy.scripts:plot_rt"
plotr = "seispy.scripts:plot_r"
download_catalog = "seispy.catalog:main"
ccp_profile = "seispy.scripts:ccp_profile"
hk = "seispy.hk:hk"
pickrf = "seispy.pickrf.pickui_tk:main"
pickdepth = "seispy.pickdepth.pickdepthui:main"
rfani = "seispy.scripts:rfani"
ccp3d = "seispy.scripts:ccp3d"
rfharmo = "seispy.scripts:rfharmo"
get_pierce_points = "seispy.scripts:get_pierce_points"
veltxt2mod = "seispy.modcreator:veltxt2mod"
get_stations = "seispy.scripts:get_stations"
get_events = "seispy.scripts:get_events"